z-index correction / interaction OK

--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -7,7 +7,7 @@ body {
         position: absolute;
         background: rgba(255, 255, 255, 0.9);
         opacity: 0;
-        z-index: 98;
+        z-index: -1;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -64,9 +64,11 @@ body {
     0%,
     95% {
         opacity: 1;
+        z-index: 98;
     }
     100% {
         opacity: 0;
+        z-index: 98;
     }
 }
 
